--- a/credentials.yml
+++ b/credentials.yml
@@ -23,15 +23,15 @@ socketio:
   session_persistence: true
 
 
-telegram:
-  access_token: "1899642229:AAFo3nNMgVu1OTHgDV7kwmvuKWIUylRGSjI"
-  verify: "portDeDakarBot"
-  webhook_url:  "https://ab2b7dd5fa36.ngrok.io/webhooks/telegram/webhook"
+# telegram:
+#   access_token: "1899642229:AAFo3nNMgVu1OTHgDV7kwmvuKWIUylRGSjI"
+#   verify: "portDeDakarBot"
+#   webhook_url:  "https://ab2b7dd5fa36.ngrok.io/webhooks/telegram/webhook"
 
-twilio:
-  account_sid: "AC6cf52f9ee40509912a189b1a33366a83"
-  auth_token: "f794e0d81569951e746b0cd082869fae"
-  twilio_number: "whatsapp:+14155238886"
+# twilio:
+#   account_sid: "AC6cf52f9ee40509912a189b1a33366a83"
+#   auth_token: "f794e0d81569951e746b0cd082869fae"
+#   twilio_number: "whatsapp:+14155238886"
 
 
 
