--- a/endpoints.yml
+++ b/endpoints.yml
@@ -10,8 +10,8 @@
 # Server which runs your custom actions.
 # https://rasa.com/docs/rasa/custom-actions
 
-action_endpoint:
- url: "http://localhost:5055/webhook"
+# action_endpoint:
+#  url: "http://localhost:5055/webhook"
 
 # Tracker store which is used to store the conversations.
 # By default the conversations are stored in memory.
@@ -40,3 +40,13 @@ action_endpoint:
 #  username: username
 #  password: password
 #  queue: queue
+
+tracker_store:
+    type: SQL
+    dialect: "postgresql"  # the dialect used to interact with the db
+    url: "localhost"  # (optional) host of the sql db, e.g. "localhost"
+    db: "test"  # path to your db
+    username: postgres # username used for authentication
+    password: Port2021@ # password used for authentication
+    query: # optional dictionary to be added as a query string to the connection URL
+      driver: my-driver
